load ivy and maven from local dirs